force-app/main/default/objects/DRE__DTE_Plan_Data_Set__c/DRE__DTE_Plan_Data_Set__c.object-meta.xml
<CustomObject>
    <label>DTE Test Data Set</label>
    <nameField>
        <displayFormat>DTETSTSET-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Test Data Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>