force-app/main/default/objects/DRE__DTE_Plan_Data_Set__c/fields/DRE__DTE_Data_Set__c.field-meta.xml
<CustomField>
    <fullName>DRE__DTE_Data_Set__c</fullName>
    <label>DTE Data Set</label>
    <referenceTo>DRE__DTE_Data_Set__c</referenceTo>
    <relationshipName>DTE_Plan_Data_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>