force-app/main/default/objects/DRE__DTE_Plan_Data_Set__c/fields/DRE__DTE_Plan__c.field-meta.xml
<CustomField>
    <fullName>DRE__DTE_Plan__c</fullName>
    <label>DTE Plan</label>
    <referenceTo>DRE__DTE_Plan__c</referenceTo>
    <relationshipName>DTE_Plan_Data_Sets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>