force-app/main/default/objects/DRE__DTE_Plan_Data_Set__c/fields/DRE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>DRE__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>